--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -54,6 +54,14 @@
       <version>${glassfish.jersey.containers.version}</version>
       <scope>runtime</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
+		<dependency>
+		    <groupId>com.sun.jersey</groupId>
+		    <artifactId>jersey-client</artifactId>
+		    <version>1.19.4</version>
+		</dependency>
+    
   </dependencies>
 
   <reporting>
