--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -62,6 +62,13 @@
 		    <version>1.19.4</version>
 		</dependency>
     
+     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
 
   <reporting>
