--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -7,6 +7,8 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>billing</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <name>billing</name>
 
   <build>
     <plugins>
@@ -18,40 +20,43 @@
   </build>
 
   <properties>
-    <jackson.core.version>2.9.1</jackson.core.version>
-    <glassfish.jersey.containers.version>2.26</glassfish.jersey.containers.version>
+    <version.jackson.core>2.9.1</version.jackson.core>
+    <version.glassfish.jersey.containers>2.26</version.glassfish.jersey.containers>
+    <version.junit>4.12</version.junit>
+    <version.sun.jersey>1.19.4</version.sun.jersey>
+    <version.maven.checkstyle>2.17</version.maven.checkstyle>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-jetty-servlet</artifactId>
-      <version>${glassfish.jersey.containers.version}</version>
+      <version>${version.glassfish.jersey.containers}</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.inject</groupId>
       <artifactId>jersey-hk2</artifactId>
-      <version>${glassfish.jersey.containers.version}</version>
+      <version>${version.glassfish.jersey.containers}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>${jackson.core.version}</version>
+      <version>${version.jackson.core}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>${jackson.core.version}</version>
+      <version>${version.jackson.core}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>${jackson.core.version}</version>
+      <version>${version.jackson.core}</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-json-jackson</artifactId>
-      <version>${glassfish.jersey.containers.version}</version>
+      <version>${version.glassfish.jersey.containers}</version>
       <scope>runtime</scope>
     </dependency>
     
@@ -59,13 +64,13 @@
 		<dependency>
 		    <groupId>com.sun.jersey</groupId>
 		    <artifactId>jersey-client</artifactId>
-		    <version>1.19.4</version>
+		    <version>${version.sun.jersey}</version>
 		</dependency>
     
      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
     
@@ -76,7 +81,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
+        <version>${version.maven.checkstyle}</version>
         <reportSets>
           <reportSet>
             <reports>
