--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -66,6 +66,13 @@
 		    <artifactId>jersey-client</artifactId>
 		    <version>${version.sun.jersey}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-json -->
+		<dependency>
+		    <groupId>com.sun.jersey</groupId>
+		    <artifactId>jersey-json</artifactId>
+		    <version>1.19.4</version>
+		</dependency>
+		
     
      <dependency>
       <groupId>junit</groupId>
