--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -25,6 +25,7 @@
     <version.junit>4.12</version.junit>
     <version.sun.jersey>1.19.4</version.sun.jersey>
     <version.maven.checkstyle>2.17</version.maven.checkstyle>
+    <dependency.locations.enabled>false</dependency.locations.enabled>
   </properties>
 
   <dependencies>
@@ -96,6 +97,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>${version.maven.checkstyle}</version>
+        <configuration>
+          <configLocation>checkstyle.xml</configLocation>
+        </configuration>
         <reportSets>
           <reportSet>
             <reports>
