--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+    <mockito.version>1.10.19</mockito.version>
   </properties>
 
   <dependencyManagement>
@@ -31,7 +32,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-all</artifactId>
-        <version>1.10.19</version>
+        <version>${mockito.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
