--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -20,6 +20,7 @@
   <properties>
     <jackson.core.version>2.9.1</jackson.core.version>
     <glassfish.jersey.containers.version>2.26</glassfish.jersey.containers.version>
+    <maven-checkstyle.version>2.17</maven-checkstyle.version>
   </properties>
 
   <dependencies>
@@ -61,7 +62,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
+        <version>${maven-checkstyle.version}</version>
         <reportSets>
           <reportSet>
             <reports>
