--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -73,8 +73,6 @@
     </dependency>
     
   </dependencies>
-  
-  
 
   <reporting>
     <plugins>
@@ -82,6 +80,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>${maven-checkstyle.version}</version>
+        <configuration>
+          <configLocation>checkstyle.xml</configLocation>
+        </configuration>
         <reportSets>
           <reportSet>
             <reports>
